fix the spacing on the mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,10 @@ body {
   scroll-behavior: smooth !important;
 }
 
+body, html {
+  overflow-x: hidden !important;
+}
+
 
 section {
   scroll-padding-top: 25vh !important;
@@ -35,4 +39,15 @@ section {
 
 button, a {
   cursor: pointer;
+}
+
+.h1 {
+  font-size: clamp(80px,10vw,140px);
+}
+
+
+@media screen and (max-width: 640px) {
+  .h1 {
+    font-size: 70px !important;
+  }
 }
